# regret

./: .coveragerc  .flake8  .pre-commit-config.yaml  .testr.conf  .travis.yml  CONTRIBUTING.rst  COPYING  MANIFEST.in  README.rst  codecov.yml  noxfile.py  pyproject.toml  setup.cfg  test-requirements.in  test-requirements.txt  tox.ini
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  packaging.yml  zizmor.yml
docs/: api.rst  before-you-deprecate.rst  compatibility.rst  conf.py  index.rst  requirements.in  requirements.txt  spelling-wordlist.txt  spelling_wordlist.txt  what-you-can-deprecate.rst
docs/api/: modules.rst  regret.rst
regret/: __init__.py  _api.py  _inspect.py  _sphinx.py  _warnings.py  emitted.py  testing.py  typing.py
regret/tests/: deprecated_module.py  test_api.py  test_integration.py  test_testing.py
