[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "regret"
description = "You made a thing, but now you wish it'd go away... Deprecations, a love story."
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["deprecation", "deprecations", "regret", "tooling", "maintenance"]
authors = [
  {email = "Julian+regret@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
  "attrs",
]

[project.urls]
homepage = "https://github.com/Julian/regret"
documentation = "https://regret.readthedocs.io/"
issues = "https://github.com/Julian/regret/issues/"
funding = "https://github.com/sponsors/Julian"
source = "https://github.com/Julian/regret"

[tool.isort]
from_first = true
include_trailing_comma = true
multi_line_output = 3
