[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "regret"
description = "You made a thing, but now you wish it'd go away... Deprecations, a love story."
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["deprecation", "deprecations", "regret", "tooling", "maintenance"]
authors = [
  {email = "Julian+regret@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
  "attrs",
]

[project.urls]
Homepage = "https://github.com/Julian/regret"
Documentation = "https://regret.readthedocs.io/"
Issues = "https://github.com/Julian/regret/issues/"
Funding = "https://github.com/sponsors/Julian"
Source = "https://github.com/Julian/regret"

[tool.isort]
from_first = true
include_trailing_comma = true
multi_line_output = 3

[tool.pydocstyle]
match = "(?!(test_|_|compat|cli)).*\\.py"  # see PyCQA/pydocstyle#323
add-select = [
  "D410", # Trailing whitespace plz
]
add-ignore = [
  "D107",  # Hah, no
  "D200",  # 1-line docstrings don't need to be on one line
  "D202",  # One line is fine.
  "D412",  # Trailing whitespace plz
  "D413",  # No trailing whitespace plz
]
