[metadata]
name = regret
url = https://github.com/Julian/regret
project_urls =
    Docs = https://regret.readthedocs.io/en/latest/
description = "You made a thing, but now you wish it'd go away... Deprecations, a love story."
long_description = file: README.rst
author = Julian Berman
author_email = Julian+regret@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    attrs
    importlib_metadata

[flake8]
exclude = regret/__init__.py

[bdist_wheel]
universal = 1
